fix: profile__desc and profile__name not centered when viewing from mobile

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -29,18 +29,18 @@
 }
 
 .profile__name-container {
-    max-width: 100%;
+    width: 100%;
     align-self: flex-start;
     display: flex;
     flex-direction: row;
     align-items: start;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-content: start;
 }
 
 .profile__name {
     margin: 0px;
-    width: calc(100% - 34px);
+    max-width: calc(100% - 34px);
     font-size: 42px;
     line-height: 48px;
     font-weight: 500;
@@ -99,6 +99,7 @@
     .profile__info {
         margin-right: auto;
     }
+    
     .profile__add {
         background-image: url("../images/addbutton_long.svg");
         margin: 15px auto 0px;
@@ -118,13 +119,16 @@
     }
 
     .profile__info {
-        max-width: 282px;
+        align-content: center;
         margin: 22px auto 0px;
     }
     
+    .profile__name-container {
+        align-self: center;
+    }
+
     .profile__name {
         margin-left: auto;
-        align-self: center;
     }
 
     .profile__edit {
@@ -132,6 +136,8 @@
     }
 
     .profile__desc {
+        
+        text-align: center;
         align-self: center;
     }
 
@@ -142,9 +148,9 @@
 
 @media screen and (max-width: 500px) {
     .profile__info {
-        display: flex;
+        max-width: 282px;
         min-width: 0px;
-        margin-top: 30px;
+        margin: 30px 0px 0px;
     }
 
     .profile__name {
